<resources>
    <string name="app_name">Kotlin try</string>

    <string name="contact_name">Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_empty">Empty</string>
</resources>
