<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onClick"
                  type="android.view.View.OnClickListener"/>
        <variable name="contactViewModel"
                  type="com.gadgeon.pro4tech.kotlin.contact.create.ViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".contact.home.ContactFragment" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent">

        <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                  android:ems="10"
                  android:hint="@string/contact_name" android:inputType="textPersonName"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" android:id="@+id/name"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp" android:text="@={contactViewModel.name}"/>
        <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                  android:ems="10" android:text="@={contactViewModel.nickname}"
                  android:hint="@string/nick_name" android:inputType="textPersonName"
                  app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toStartOf="parent"
                  android:id="@+id/nick_name" android:layout_marginTop="8dp" android:layout_marginStart="8dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
        <EditText
                android:ems="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/phone_no" android:text="@={contactViewModel.mobileNumber}"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/nick_name"
                android:hint="@string/mobile_phone" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
        <EditText
                android:ems="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/email" android:text="@={contactViewModel.email}"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/phone_no" android:hint="@string/email"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/address" android:text="@={contactViewModel.address}"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email"
                android:hint="@string/address"/>

        <Button
                android:onClick="@{() -> contactViewModel.onSaveClicked()}"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/address"/>
        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/save" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/address"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>